kube/alb-ingress-class.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: aws-load-balancer
spec:
  controller: ingress.k8s.aws/alb
