kube/php.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-backend
  labels:
    app: php
spec:
  replicas: 2
  selector:
    matchLabels:
      app: php
  template:
    metadata:
      labels:
        app: php
    spec:
      containers:
      - name: php-backend
        image: kaivalyabachkar/three-tier-architecture-php:latest
        ports:
        - containerPort: 9000
