kube/nginx_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-external
  labels:
    app: nginx
spec:
  selector:
    app: nginx
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
