kube/php_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-service
  labels:
    app: php
spec:
  type: ClusterIP 
  selector:
    app: php
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
