kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: three-tier-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - host: example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-external
                port:
                  number: 80
    - host: example1.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx1-external
                port:
                  number: 80
